tests/invalid/field_syntax_error.err_exp
field_syntax_error.m:013: In clause for function `field_syntax_error.baz'/1:
field_syntax_error.m:013:   warning: variable `Bar' occurs only once in this
field_syntax_error.m:013:   scope.
field_syntax_error.m:015: In clause for function `field_syntax_error.baz3'/1:
field_syntax_error.m:015:   warning: variable `Bar' occurs only once in this
field_syntax_error.m:015:   scope.
field_syntax_error.m:013: In clause for function `baz'/1:
field_syntax_error.m:013:   in function result term of clause head:
field_syntax_error.m:013:   error: invalid use of field selection operator
field_syntax_error.m:013:   (`^').
field_syntax_error.m:014: In clause for function `baz2'/1:
field_syntax_error.m:014:   in function result term of clause head:
field_syntax_error.m:014:   error: invalid use of field selection operator
field_syntax_error.m:014:   (`^').
field_syntax_error.m:015: In clause for function `baz3'/1:
field_syntax_error.m:015:   in function result term of clause head:
field_syntax_error.m:015:   error: invalid use of field update operator (`:=').
field_syntax_error.m:015: In clause for function `baz3'/1:
field_syntax_error.m:015:   in function result term of clause head:
field_syntax_error.m:015:   in argument 1 of functor `:=/2':
field_syntax_error.m:015:   error: invalid use of field selection operator
field_syntax_error.m:015:   (`^').
field_syntax_error.m:016: In clause for function `baz4'/1:
field_syntax_error.m:016:   in function result term of clause head:
field_syntax_error.m:016:   error: invalid use of field update operator (`:=').
field_syntax_error.m:016: In clause for function `baz4'/1:
field_syntax_error.m:016:   in function result term of clause head:
field_syntax_error.m:016:   in argument 1 of functor `:=/2':
field_syntax_error.m:016:   error: invalid use of field selection operator
field_syntax_error.m:016:   (`^').
For more information, recompile with `-E'.
